[package]
name = "althea_rs"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]

[workspace]
members = ["althea_kernel_interface", "bounty_hunter", "settings", "clu", "exit_db", "rita"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false

[profile.dev]
opt-level = "z"
debug = true

[features]
default = []
system_alloc = []
